Se agrega funcionalidad y documentacion de agendas y clientes
